--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "scripts": {
     "build": "react-scripts build",
+    "build-storybook": "build-storybook -s public",
     "bundle": "yarn build --stats; webpack-bundle-analyzer build/bundle-stats.json",
     "coverage": "yarn run test --coverage",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
     "prepare": "husky install",
     "start": "react-scripts start",
+    "storybook": "start-storybook -p 6006 -s public",
     "test": "react-scripts test"
   },
   "lint-staged": {
@@ -70,37 +72,61 @@
       "^.+\\.module\\.(css|sass|scss)$"
     ]
   },
+  "resolutions": {
+    "babel-loader": "8.1.0"
+  },
   "dependencies": {
+    "dompurify": "^2.3.3",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "6.0.2",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.2",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/components": "^6.3.12",
+    "@storybook/core-events": "^6.3.12",
+    "@storybook/node-logger": "^6.3.12",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.12",
+    "@storybook/theming": "^6.3.12",
+    "@types/dompurify": "^2.3.1",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.0",
-    "@types/react": "^17.0.30",
+    "@types/node": "16.11.7",
+    "@types/react": "17.0.35",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.1",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.15",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
+    "@typescript-eslint/eslint-plugin": "5.3.1",
+    "@typescript-eslint/parser": "5.3.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "19.0.0",
+    "eslint-config-airbnb-typescript": "15.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-jest": "^25.2.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "25.2.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-no-inline-styles": "^1.0.5",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
-    "lint-staged": "^11.2.6",
+    "lint-staged": "12.0.2",
     "prettier": "^2.4.1",
     "react-is": "^17.0.2",
     "react-scripts": "^4.0.3",
@@ -109,17 +135,17 @@
     "typescript": "^4.4.4",
     "web-vitals": "2.1.2",
     "webpack-bundle-analyzer": "^4.5.0",
-    "workbox-background-sync": "^5.1.3",
-    "workbox-broadcast-update": "^5.1.3",
-    "workbox-cacheable-response": "^5.1.3",
-    "workbox-core": "^5.1.3",
-    "workbox-expiration": "^5.1.3",
-    "workbox-google-analytics": "^5.1.3",
-    "workbox-navigation-preload": "^5.1.3",
-    "workbox-precaching": "^5.1.3",
-    "workbox-range-requests": "^5.1.3",
-    "workbox-routing": "^5.1.3",
-    "workbox-strategies": "^5.1.3",
-    "workbox-streams": "^5.1.3"
+    "workbox-background-sync": "6.3.0",
+    "workbox-broadcast-update": "6.3.0",
+    "workbox-cacheable-response": "6.3.0",
+    "workbox-core": "6.3.0",
+    "workbox-expiration": "6.3.0",
+    "workbox-google-analytics": "6.3.0",
+    "workbox-navigation-preload": "6.3.0",
+    "workbox-precaching": "6.3.0",
+    "workbox-range-requests": "6.3.0",
+    "workbox-routing": "6.3.0",
+    "workbox-strategies": "6.3.0",
+    "workbox-streams": "6.3.0"
   }
 }
